--- a/css/style.css
+++ b/css/style.css
@@ -22,15 +22,14 @@ footer{
 }
 
 #triangle{
-	color: #90caf9;
+	color: #009688;
 }
 #one{
 	font-size: 2em;
-	margin-top: 5%;
+	margin-bottom: 8%;
 }
 #two{
- 
-
+ 	padding-bottom: 6%;
 }
 #three{
 
